[package]
name = "rox"
authors = ["Josh Leath <joshua.leath@icloud.com>"]
description = "An interpreter for the Lox programming language"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
lazy_static = "1.4.0"
